Ensure Sticky Header is always shown on mobile

--- a/packages/larva-css/src/04-js/js-Header.common.inline.scss
+++ b/packages/larva-css/src/04-js/js-Header.common.inline.scss
@@ -61,13 +61,20 @@ $mobile-header-height:  #{var( --sticky-nav-height )};
 	.is-sticky & {
 		display: none;
 	}
+
+	// Hidden on mobile
+	@include pmc-breakpoint( desktop-max ) {
+		display: none;
+	}
 }
 
 .js-show-when-sticky {
-
-	display: none;
-
 	.is-sticky & {
 		display: block;
+	}
+
+	// Hidden above desktop
+	@include pmc-breakpoint( desktop ) {
+		display: none;
 	}
 }
